src/test/ui/nll/issue-48238.stderr
error: unsatisfied lifetime constraints
  --> $DIR/issue-48238.rs:21:13
   |
LL |     move || use_val(&orig); //~ ERROR
   |     --------^^^^^^^^^^^^^^
   |     |       |
   |     |       argument requires that `'1` must outlive `'2`
   |     lifetime `'1` represents the closure body
   |     lifetime `'2` appears in return type

error: aborting due to previous error

